jquery pluged in

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,21 @@
 <html>
 <head>
     <title>hello world</title>
+    <script type="text/javascript" src="jquery.js"></script>
+    <!--<script type="text/javascript" src="jquery.js"/>-->
+    <!--<script type="text/javascript" src="jquery.js"/>-->
+    <script type="text/javascript">
+        $(document).ready(
+                function () {
+                    $("input[type=submit]").click(
+                            function (e) {
+                                alert("hello world");
+                                e.preventDefault();
+                            }
+                    );
+                }
+        );
+    </script>
 </head>
 <body>
 
