atmosphere mutli channels got

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,21 +3,9 @@
 <html>
 <head>
     <title>hello world</title>
-    <script type="text/javascript" src="jquery.js"></script>
-    <!--<script type="text/javascript" src="jquery.js"/>-->
-    <!--<script type="text/javascript" src="jquery.js"/>-->
-    <script type="text/javascript">
-        $(document).ready(
-                function () {
-                    $("input[type=submit]").click(
-                            function (e) {
-                                alert("hello world");
-                                e.preventDefault();
-                            }
-                    );
-                }
-        );
-    </script>
+    <script type="text/javascript" src="jquery/jquery-1.7.2.js"></script>
+    <script type="text/javascript" src="jquery/jquery.atmosphere.js"></script>
+    <script type="text/javascript" src="application.js"></script>
 </head>
 <body>
 
