--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -1,4 +1,3 @@
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
@@ -8,14 +7,14 @@
     <meta name="author" content="Daneel Yaitskov">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/bootstrap-datetimepicker.min.css">
-    <link rel="stylesheet" href="/static/style.css">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <script type="text/javascript" src="/static/jquery.js"></script>
-    <script type="text/javascript" src="/static/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/static/bootstrap-datetimepicker.min.js"></script>
-    <script type="text/javascript" src="/static/app.js"></script>
+    <link rel="stylesheet" href="static/bootstrap.min.css">
+    <link rel="stylesheet" href="static/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" href="static/style.css">
+
+    <script type="text/javascript" src="static/jquery.js"></script>
+    <script type="text/javascript" src="static/bootstrap.min.js"></script>
+    <script type="text/javascript" src="static/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="static/app.js"></script>
     <script type="text/javascript">
     </script>
 </head>
